need to fix overflow

--- a/Home/style.css
+++ b/Home/style.css
@@ -6,6 +6,7 @@
 * {
     margin: 0;
     padding: 0;
+    overflow-y: hidden;
     /*overflow: auto;*/
     box-sizing: border-box;
 }
@@ -122,7 +123,6 @@ body {
 
 /* Carosel Code */
 .wrapper {
-    overflow: hidden;
     display: flex;
     height: 100%;
     width: 100%;
@@ -230,13 +230,13 @@ body {
     63% {
         transform: translateY(-100%);
         opacity: 0;
-        visibility: visible;
+
     }
 
     100% {
         transform: translateY(-100%);
         opacity: 0;
-        visibility: visible;
+
     }
 }
  
